--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "phaser-box2d",
-  "version": "1.1.0",
+  "name": "@flamescape/phaser-box2d",
+  "version": "1.1.0-patch1",
   "description": "Phaser Box2D",
   "keywords": [
     "physics",
